Fix autocomplete list stretching to fill the whole page

--- a/editor/assets/style.css
+++ b/editor/assets/style.css
@@ -309,6 +309,11 @@ ul.flex-center {
   position: inherit;
 }
 
+.awesomplete > ul {
+  min-width: 500px;
+  left: initial;
+}
+
 .awesomplete li[aria-selected=true] mark {
     background: #88bb88;
 }
